# semaphore-demo-haskell

./: README.md  semaphore.cabal
.semaphore/: .#semaphore.yml  semaphore.yml
app/: Main.hs
src/: Lib.hs
test/: Test.hs
