name:          semaphore
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.11 && < 5
  default-language:    Haskell2010

executable semaphore-web
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.11 && <5
                      , semaphore
                      , scotty
  hs-source-dirs:       app
  default-language:     Haskell2010

test-suite semaphore-tests
  type:                 exitcode-stdio-1.0
  build-depends:        base >= 4.11 && <5
                      , semaphore
                      , tasty
                      , tasty-hunit
  hs-source-dirs:       test
  default-language:     Haskell2010
  main-is:              Test.hs